--- a/style.css
+++ b/style.css
@@ -50,9 +50,12 @@ li, a{
 .nav-bar{
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    
     align-items: center;
     margin-top: 1rem;
+}
+.nav-bar ul{
+    margin-left: auto;
 }
 .nav-bar a{
     text-decoration: none;
@@ -157,7 +160,7 @@ footer{
     background-color: black;
     color: white;
     width: 100%;
-    margin-top: 8rem;
+    margin-top: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -198,9 +201,10 @@ footer{
     transform: scale(1.1);
 }
 
-@media (max-width: 1000px){
+@media (min-width: 500px) and (max-width: 1000px){
     .cta-img img{
-        width: 200px;
+        margin-top: -4rem;
+        width: 250px;
     }
     .cta-content{
     display: grid;
@@ -226,17 +230,44 @@ footer{
         font-size: 0.8rem;
     }
 }
-@media (min-width: 200px) and (max-width: 390px) {
-     .nav-bar a {
+@media (min-width: 0px) and (max-width: 499px) {
+    .cta-img img{
+        margin-top: 1rem;
+        width: 250px;
+    }
+    .cta-content{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 500px;
+    justify-items: center;
+    align-items: center;
+    align-items: left;
+    width: 100%;
+}
+    .courses-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    grid-auto-rows: auto;
+    gap: 4rem 2rem;
+    margin-top: 6rem;
+}
+.cta-texts a{
+    margin-top: 1rem;
+    justify-self: center;
+}
+  .nav-bar h3 {
+        font-size: 1rem;  
+    }
+    .nav-bar a {
         padding: 0.3rem 0.8rem; 
-        font-size: 0.6rem;
+        font-size: 0.8rem;
     }
-    .footer-bar a{
-         padding: 0.3rem 0.8rem;
-        font-size: 0.6rem;
+  .footer-bar h3 {
+        font-size: 1rem;  
     }
-    .footer-bar h3{
-        font-size: 1rem;
+    .footer-bar a {
+        padding: 0.3rem 0.8rem; 
+        font-size: 0.8rem;
     }
 }
     
