--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     height: auto;
     width: 100%;
     font-family: "Poppins", sans-serif;
@@ -18,53 +18,60 @@ body{
     background-image: linear-gradient(rgb(249, 254, 255) 50%, rgb(210, 222, 228));
 }
 
-h1{
+h1 {
     font-size: 3rem;
 }
-h1, p{
+
+h1,
+p {
     line-height: 1.2;
 }
-p{
+
+p {
     color: rgb(97, 97, 97);
     font-weight: 400;
 }
 
-.content{
+.content {
     width: 80%;
     padding: 1rem 2rem;
     display: grid;
-    align-content:start;
+    align-content: start;
     gap: 1.5rem;
-    
+
 }
 
-li, a{
+li,
+a {
     list-style: none;
     text-decoration: none;
-     padding: 1rem 1.7rem;
+    padding: 1rem 1.7rem;
     border-radius: 2.6rem;
     font-weight: 500;
     font-size: 0.9rem;
-     -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent;
 }
-.nav-bar{
+
+.nav-bar {
     display: flex;
     width: 100%;
-    
+
     align-items: center;
     margin-top: 1rem;
 }
-.nav-bar ul{
+
+.nav-bar ul {
     margin-left: auto;
 }
-.nav-bar a{
+
+.nav-bar a {
     text-decoration: none;
     background-color: black;
     color: white;
-     padding: 0.5rem 1.7rem;
+    padding: 0.5rem 1.7rem;
 }
 
-.cta-content{
+.cta-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 500px;
@@ -73,39 +80,46 @@ li, a{
     align-items: left;
     width: 100%;
 }
-.cta-texts{
+
+.cta-texts {
     display: grid;
     gap: 1.4rem;
     justify-items: left;
-    
+
 
 }
-.cta-texts a{
+
+.cta-texts a {
     background-image: linear-gradient(#6C63FF, #5650cc);
     color: white;
 
     transition: 0.3s;
-   
+
 }
-.cta-img{
+
+.cta-img {
     justify-items: left;
     position: relative;
 }
-.cta-img img{
+
+.cta-img img {
     width: 300px;
 }
+
 .course-card p {
     font-size: 0.8rem;
 }
-.courses-content{
+
+.courses-content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: auto;
     gap: 4rem 2rem;
     margin-top: 6rem;
-    
+
 }
-.course-card{
+
+.course-card {
     display: grid;
     justify-content: left;
     align-items: center;
@@ -114,11 +128,11 @@ li, a{
     padding: 2.5rem 1rem 1.5rem 1rem;
     position: relative;
     border-radius: 1rem;
-    box-shadow:  5px 5px 20px rgba(0, 0, 0, 0.085);
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.085);
     transition: 0.3s;
 }
 
-.views{
+.views {
     height: auto;
     width: auto;
     background-color: rgb(255, 255, 255);
@@ -130,16 +144,19 @@ li, a{
     padding: 1rem;
     backdrop-filter: blur(10px);
 }
-.views p{
+
+.views p {
     font-size: 0.7rem;
 }
-.views h5{
+
+.views h5 {
     font-size: 1.5rem;
 }
-.card-icon{
+
+.card-icon {
     height: 3rem;
     width: 3rem;
-    background-image: linear-gradient( #6C63FF,#5650cc );
+    background-image: linear-gradient(#6C63FF, #5650cc);
     position: absolute;
     top: -12%;
     left: 5%;
@@ -148,15 +165,16 @@ li, a{
     align-items: center;
     justify-content: center;
 }
-.card-icon img{
+
+.card-icon img {
     width: 25px;
 }
 
-.course-card a{
+.course-card a {
     padding: 0.5rem 0rem;
 }
 
-footer{
+footer {
     background-color: black;
     color: white;
     width: 100%;
@@ -165,7 +183,8 @@ footer{
     justify-content: center;
     align-items: center;
 }
-.footer-bar{
+
+.footer-bar {
     width: 80%;
     display: flex;
     align-items: center;
@@ -173,7 +192,7 @@ footer{
     height: 4rem;
 }
 
-.footer-bar a{
+.footer-bar a {
     color: rgb(255, 255, 255);
     background-color: black;
     border: 1.5px solid white;
@@ -181,93 +200,107 @@ footer{
     transform: 0.3s;
 }
 
-.cta-texts a:hover{
+.cta-texts a:hover {
     background-image: linear-gradient(#817bff, #6f6acc);
     color: white;
     transform: scale(1.1);
 }
 
-.nav-bar a:hover{
+.nav-bar a:hover {
     background-color: rgb(83, 83, 83);
     color: white;
 }
-.footer-bar a:hover{
+
+.footer-bar a:hover {
     color: rgb(0, 0, 0);
     background-color: white;
     border: 1px solid white;
 }
-.course-card:hover{
+
+.course-card:hover {
     background-color: rgb(253, 248, 255);
     transform: scale(1.1);
 }
 
-@media (min-width: 500px) and (max-width: 1000px){
-    .cta-img img{
+
+@media (min-width: 500px) and (max-width: 1000px) {
+    .cta-img img {
         margin-top: -4rem;
         width: 250px;
     }
-    .cta-content{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 500px;
-    justify-items: center;
-    align-items: center;
-    align-items: left;
-    width: 100%;
-}
-    .courses-content{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    grid-auto-rows: auto;
-    gap: 4rem 2rem;
-    margin-top: 6rem;
-}
-  .nav-bar h3 {
-        font-size: 1rem;  
+
+    .cta-content {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 500px;
+        justify-items: center;
+        align-items: center;
+        align-items: left;
+        width: 100%;
     }
+
+    .courses-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-auto-rows: auto;
+        gap: 4rem 2rem;
+        margin-top: 6rem;
+    }
+
+    .nav-bar h3 {
+        font-size: 1rem;
+    }
+
     .nav-bar a {
-        padding: 0.3rem 0.8rem; 
+        padding: 0.3rem 0.8rem;
         font-size: 0.8rem;
     }
 }
+
 @media (min-width: 0px) and (max-width: 499px) {
-    .cta-img img{
-        margin-top: 1rem;
+    .cta-img img {
+        margin-top: 2rem;
         width: 250px;
     }
-    .cta-content{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 500px;
-    justify-items: center;
-    align-items: center;
-    align-items: left;
-    width: 100%;
-}
-    .courses-content{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    grid-auto-rows: auto;
-    gap: 4rem 2rem;
-    margin-top: 6rem;
-}
-.cta-texts a{
-    margin-top: 1rem;
-    justify-self: center;
-}
-  .nav-bar h3 {
-        font-size: 1rem;  
+
+    .cta-content {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 500px;
+        justify-items: center;
+        align-items: center;
+        align-items: left;
+        width: 100%;
     }
+
+    .courses-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-auto-rows: auto;
+        gap: 4rem 2rem;
+        margin-top: 6rem;
+    }
+
+    .cta-texts a {
+        margin-top: 1rem;
+        justify-self: center;
+    }
+
+    .nav-bar h3 {
+        font-size: 1rem;
+    }
+
     .nav-bar a {
-        padding: 0.3rem 0.8rem; 
+        padding: 0.3rem 0.8rem;
         font-size: 0.8rem;
     }
-  .footer-bar h3 {
-        font-size: 1rem;  
+
+    .footer-bar h3 {
+        font-size: 1rem;
     }
+
     .footer-bar a {
-        padding: 0.3rem 0.8rem; 
+        padding: 0.3rem 0.8rem;
         font-size: 0.8rem;
     }
 }
-    
